# PublishPyPiTest

./: .setup.cfg.un~  README.md  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
tests/: test_module.py
