[metadata]
# replace with your username:
name = pgk-test-jandotnet
version = 0.0.2
author = JanDotNet
author_email = JanDotNet@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JanDotNet/PublishPyPiTest
project_urls =
    Bug Tracker = https://github.com/JanDotNet/PublishPyPiTest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

# [options.packages.find]
# where = pkg
